Move to TD approach

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,38 +1,1 @@
-<form [formGroup]="pageForm" (ngSubmit)="onSubmit()">
-  <div class="d-flex">
-    <button type="submit" class="btn btn-primary mb-2" [disabled]="pageForm.invalid && countInvalidControls(pageForm) && (pageForm.touched || this.isSubmittedForm)">Submit all forms</button>
-    <p *ngIf="pageForm.invalid && countInvalidControls(pageForm) && (pageForm.touched || this.isSubmittedForm)" class="invalid-feedback d-block">Invalid forms: {{countInvalidControls(pageForm)}}</p>
-  </div>
-  <div formArrayName="cards" class="d-flex flex-wrap gap-1">
-    <div
-      class="card p-3"
-      *ngFor="let formCardGroup of formCardGroups; let i = index"
-      [formGroupName]="i"
-    >
-      <button class="btn btn-default btn-remove" (click)="onRemoveForm(i)">X</button>
-      <app-country-input class="mb-2" [index]="i" formControlName="country" appForbiddenCountry></app-country-input>
-      <span *ngIf="isErrorShown('country', i)" class="invalid-feedback d-block">Please provide a correct Country</span>
-      <div class="form-group mb-2">
-        <label [for]="'username-' + i">Username</label>
-        <input type="text" class="form-control" formControlName="username" [id]="'username-' + i" placeholder="Username" [disabled]="isPendingShown(i)" appIsAvailable>
-        <span *ngIf="isErrorShown('username', i)" class="invalid-feedback d-block">Please provide a correct Username</span>
-        <span *ngIf="isPendingShown(i)" class="valid-feedback d-block">Pending</span>
-      </div>
-      <div class="form-group">
-        <label [for]="'birthday-' + i">Birthday</label>
-        <input type="date" class="form-control" formControlName="birthday" [id]="'birthday-' + i" placeholder="Birthday">
-      </div>
-    </div>
-    <button
-      class="btn btn-custom text-primary"
-      type="button"
-      (click)="onAddForm()">
-      <span class="btn-custom__icon">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
-          <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
-        </svg>
-      </span>
-    </button>
-  </div>
-</form>
-
+<app-form-page></app-form-page>
