--- a/src/app/components/add-new-card-button/add-new-card-button.component.html
+++ b/src/app/components/add-new-card-button/add-new-card-button.component.html
@@ -1,7 +1,9 @@
 <button
   class="btn btn-custom text-primary"
   type="button"
-  (click)="onAddCard()">
+  (click)="onAddCard()"
+  [disabled]="this.disabled$ | async"
+  >
   <span class="btn-custom__icon">
     <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
       <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
